data set corrected

--- a/Hackathon - Pro Kabaddi League/pro-kabaddi-data-analysis/cook_code.ipynb
+++ b/Hackathon - Pro Kabaddi League/pro-kabaddi-data-analysis/cook_code.ipynb
@@ -298,6 +298,30 @@
     " \n",
     "print(concat)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'gc' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-df3470240291>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# garbage collect (unused) object\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mgc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcollect\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'gc' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# garbage collect (unused) object\n",
+    "gc.collect()\n",
+    "\n",
+    "del ip_hour_device delete data frame\n"
+   ]
   }
  ],
  "metadata": {
