--- a/Hackathon - Pro Kabaddi League/pro-kabaddi-data-analysis/kabaddi2.ipynb
+++ b/Hackathon - Pro Kabaddi League/pro-kabaddi-data-analysis/kabaddi2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -189,68 +189,179 @@
        "      <td>11</td>\n",
        "      <td>Bonus Right</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>00:12</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>28</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>36</td>\n",
+       "      <td>10</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>23</td>\n",
+       "      <td>19</td>\n",
+       "      <td>0</td>\n",
+       "      <td>11</td>\n",
+       "      <td>Bonus Right</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>team</td>\n",
+       "      <td>00:17</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>31</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>39</td>\n",
+       "      <td>10</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>19</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0</td>\n",
+       "      <td>11</td>\n",
+       "      <td>Bonus Right</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>00:30</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>38</td>\n",
+       "      <td>10</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>21</td>\n",
+       "      <td>18</td>\n",
+       "      <td>0</td>\n",
+       "      <td>11</td>\n",
+       "      <td>Bonus Right</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2 rows × 145 columns</p>\n",
+       "<p>5 rows × 145 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "  events__event__card_type events__event__clock  events__event__defender_id  \\\n",
        "0                    coach                00:40                         NaN   \n",
        "1                   player                00:10                         NaN   \n",
+       "2                      NaN                00:12                         NaN   \n",
+       "3                     team                00:17                         NaN   \n",
+       "4                      NaN                00:30                         NaN   \n",
        "\n",
        "   events__event__defending_all_out_points  \\\n",
        "0                                        0   \n",
        "1                                        0   \n",
+       "2                                        0   \n",
+       "3                                        0   \n",
+       "4                                        0   \n",
        "\n",
        "   events__event__defending_bonus_points  \\\n",
        "0                                      0   \n",
        "1                                      0   \n",
+       "2                                      0   \n",
+       "3                                      0   \n",
+       "4                                      0   \n",
        "\n",
        "   events__event__defending_capture_points  events__event__defending_points  \\\n",
        "0                                        0                                0   \n",
        "1                                        0                                0   \n",
+       "2                                        0                                0   \n",
+       "3                                        0                                0   \n",
+       "4                                        0                                0   \n",
        "\n",
        "   events__event__defending_team_id  \\\n",
        "0                                 2   \n",
        "1                                29   \n",
+       "2                                28   \n",
+       "3                                31   \n",
+       "4                                 2   \n",
        "\n",
        "   events__event__defending_technical_points  events__event__do_or_die  \\\n",
        "0                                          0                     False   \n",
        "1                                          0                      True   \n",
+       "2                                          0                     False   \n",
+       "3                                          0                     False   \n",
+       "4                                          0                     False   \n",
        "\n",
        "         ...         teams__team__stats__raids__super_raids  \\\n",
        "0        ...                                              0   \n",
        "1        ...                                              0   \n",
+       "2        ...                                              0   \n",
+       "3        ...                                              0   \n",
+       "4        ...                                              1   \n",
        "\n",
        "   teams__team__stats__raids__total  teams__team__stats__raids__unsuccessful  \\\n",
        "0                                39                                        4   \n",
        "1                                37                                        9   \n",
+       "2                                36                                       10   \n",
+       "3                                39                                       10   \n",
+       "4                                38                                       10   \n",
        "\n",
        "   teams__team__stats__tackles__successful  \\\n",
        "0                                        6   \n",
        "1                                       10   \n",
+       "2                                        4   \n",
+       "3                                        8   \n",
+       "4                                        3   \n",
        "\n",
        "  teams__team__stats__tackles__super_tackles  \\\n",
        "0                                          1   \n",
        "1                                          2   \n",
+       "2                                          0   \n",
+       "3                                          1   \n",
+       "4                                          0   \n",
        "\n",
        "   teams__team__stats__tackles__total  \\\n",
        "0                                  24   \n",
        "1                                  21   \n",
+       "2                                  23   \n",
+       "3                                  19   \n",
+       "4                                  21   \n",
        "\n",
        "   teams__team__stats__tackles__unsuccessful  teams__team__yellow_card_count  \\\n",
        "0                                         18                               0   \n",
        "1                                         11                               0   \n",
+       "2                                         19                               0   \n",
+       "3                                         11                               0   \n",
+       "4                                         18                               0   \n",
        "\n",
        "   zones__zone__id  zones__zone__name  \n",
        "0               11        Bonus Right  \n",
        "1               11        Bonus Right  \n",
+       "2               11        Bonus Right  \n",
+       "3               11        Bonus Right  \n",
+       "4               11        Bonus Right  \n",
        "\n",
-       "[2 rows x 145 columns]"
+       "[5 rows x 145 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,12 +372,12 @@
     "f3.close()\n",
     "data3 = map( lambda x: flatten_json( x, \"__\" ), data3 )\n",
     "df3 = pd.DataFrame(list(data3))\n",
-    "df3.head(2)"
+    "df3.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -341,6 +452,57 @@
        "      <td>Tackles Per Match</td>\n",
        "      <td>45.4</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Super Tackles</td>\n",
+       "      <td>89</td>\n",
+       "      <td>22</td>\n",
+       "      <td>Wei Yang</td>\n",
+       "      <td></td>\n",
+       "      <td>3</td>\n",
+       "      <td>JAIPUR PINK PANTHERS</td>\n",
+       "      <td></td>\n",
+       "      <td>0</td>\n",
+       "      <td>Players</td>\n",
+       "      <td>True</td>\n",
+       "      <td>table</td>\n",
+       "      <td>Tackles Per Match</td>\n",
+       "      <td>44.15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Super Tackles</td>\n",
+       "      <td>105</td>\n",
+       "      <td>46</td>\n",
+       "      <td>Gurvinder Singh</td>\n",
+       "      <td></td>\n",
+       "      <td>5</td>\n",
+       "      <td>U MUMBA</td>\n",
+       "      <td></td>\n",
+       "      <td>0</td>\n",
+       "      <td>Players</td>\n",
+       "      <td>True</td>\n",
+       "      <td>table</td>\n",
+       "      <td>Tackles Per Match</td>\n",
+       "      <td>42.73</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Super Tackles</td>\n",
+       "      <td>211</td>\n",
+       "      <td>36</td>\n",
+       "      <td>Chandran Ranjit</td>\n",
+       "      <td></td>\n",
+       "      <td>31</td>\n",
+       "      <td>GUJARAT FORTUNEGIANTS</td>\n",
+       "      <td></td>\n",
+       "      <td>0</td>\n",
+       "      <td>Players</td>\n",
+       "      <td>True</td>\n",
+       "      <td>table</td>\n",
+       "      <td>Tackles Per Match</td>\n",
+       "      <td>45.54</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -349,49 +511,82 @@
        "  tracker__extra_info__info_keys__key_title  \\\n",
        "0                             Super Tackles   \n",
        "1                             Super Tackles   \n",
+       "2                             Super Tackles   \n",
+       "3                             Super Tackles   \n",
+       "4                             Super Tackles   \n",
        "\n",
        "  tracker__extra_info__info_keys__value  \\\n",
        "0                                   100   \n",
        "1                                   110   \n",
+       "2                                    89   \n",
+       "3                                   105   \n",
+       "4                                   211   \n",
        "\n",
        "  tracker__extra_info__info_table__table_contents__id  \\\n",
        "0                                                 11    \n",
        "1                                                 21    \n",
+       "2                                                 22    \n",
+       "3                                                 46    \n",
+       "4                                                 36    \n",
        "\n",
        "  tracker__extra_info__info_table__table_contents__name  \\\n",
        "0                                       Dong Ju Hong      \n",
        "1                            Sinotharan Kanesharajah      \n",
+       "2                                           Wei Yang      \n",
+       "3                                    Gurvinder Singh      \n",
+       "4                                    Chandran Ranjit      \n",
        "\n",
        "  tracker__extra_info__info_table__table_contents__short_name  \\\n",
        "0                                                               \n",
        "1                                                               \n",
+       "2                                                               \n",
+       "3                                                               \n",
+       "4                                                               \n",
        "\n",
        "  tracker__extra_info__info_table__table_contents__team_id  \\\n",
        "0                                                  2         \n",
        "1                                                  1         \n",
+       "2                                                  3         \n",
+       "3                                                  5         \n",
+       "4                                                 31         \n",
        "\n",
        "  tracker__extra_info__info_table__table_contents__team_name  \\\n",
        "0                                  DABANG DELHI K.C.           \n",
        "1                                    BENGALURU BULLS           \n",
+       "2                               JAIPUR PINK PANTHERS           \n",
+       "3                                            U MUMBA           \n",
+       "4                              GUJARAT FORTUNEGIANTS           \n",
        "\n",
        "  tracker__extra_info__info_table__table_contents__team_short_name  \\\n",
        "0                                                                    \n",
        "1                                                                    \n",
+       "2                                                                    \n",
+       "3                                                                    \n",
+       "4                                                                    \n",
        "\n",
        "  tracker__extra_info__info_table__table_contents__value  \\\n",
        "0                                                  0       \n",
        "1                                                  0       \n",
+       "2                                                  0       \n",
+       "3                                                  0       \n",
+       "4                                                  0       \n",
        "\n",
        "  tracker__extra_info__info_table__title  tracker__has_extra_info  \\\n",
        "0                                Players                     True   \n",
        "1                                Players                     True   \n",
+       "2                                Players                     True   \n",
+       "3                                Players                     True   \n",
+       "4                                Players                     True   \n",
        "\n",
        "  tracker__info_type     tracker__title tracker__title_value  \n",
        "0              table  Tackles Per Match                 49.9  \n",
-       "1              table  Tackles Per Match                 45.4  "
+       "1              table  Tackles Per Match                 45.4  \n",
+       "2              table  Tackles Per Match                44.15  \n",
+       "3              table  Tackles Per Match                42.73  \n",
+       "4              table  Tackles Per Match                45.54  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,12 +597,12 @@
     "f4.close()\n",
     "data4 = map( lambda x: flatten_json( x, \"__\" ), data4 )\n",
     "df4 = pd.DataFrame(list(data4))\n",
-    "df4.head(2)"
+    "df4.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +672,7 @@
        " 'teams__team__squad__top_defender']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1451,7 +1646,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
