Improve data analysis of pro kabbadi prediction

--- a/Hackathon - Pro Kabaddi League/pro-kabaddi-data-analysis/pro-kabaddi-predictor.ipynb
+++ b/Hackathon - Pro Kabaddi League/pro-kabaddi-data-analysis/pro-kabaddi-predictor.ipynb
@@ -5184,107 +5184,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 277,
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['bio_captain',\n",
-       " 'bio_captain_id',\n",
-       " 'bio_captain_shortname',\n",
-       " 'bio_city_name',\n",
-       " 'bio_coach',\n",
-       " 'bio_coach_id',\n",
-       " 'bio_coach_shortname',\n",
-       " 'bio_facebook',\n",
-       " 'bio_google_plus',\n",
-       " 'bio_instagram',\n",
-       " 'bio_match_short_code',\n",
-       " 'bio_official_website',\n",
-       " 'bio_owner',\n",
-       " 'bio_owner_id',\n",
-       " 'bio_owner_shortname',\n",
-       " 'bio_short_name',\n",
-       " 'bio_team_id',\n",
-       " 'bio_team_name',\n",
-       " 'bio_twitter',\n",
-       " 'bio_venue_id',\n",
-       " 'bio_venue_name',\n",
-       " 'bio_venue_shortname',\n",
-       " 'bio_writeup',\n",
-       " 'bio_year_founded',\n",
-       " 'over_all_stats_all_out_points',\n",
-       " 'over_all_stats_all_outs',\n",
-       " 'over_all_stats_capture_points',\n",
-       " 'over_all_stats_defence_touch_points',\n",
-       " 'over_all_stats_defending_bonus_points',\n",
-       " 'over_all_stats_draws',\n",
-       " 'over_all_stats_empty_raid',\n",
-       " 'over_all_stats_extra_points',\n",
-       " 'over_all_stats_green_cards',\n",
-       " 'over_all_stats_highest_score_highest_score',\n",
-       " 'over_all_stats_highest_score_match_date',\n",
-       " 'over_all_stats_highest_score_match_id',\n",
-       " 'over_all_stats_highest_score_team_id',\n",
-       " 'over_all_stats_highest_score_team_name',\n",
-       " 'over_all_stats_highest_score_venue_id',\n",
-       " 'over_all_stats_highest_score_venue_name',\n",
-       " 'over_all_stats_losses',\n",
-       " 'over_all_stats_matches',\n",
-       " 'over_all_stats_max_win_margin_match_date',\n",
-       " 'over_all_stats_max_win_margin_match_id',\n",
-       " 'over_all_stats_max_win_margin_max_win_margin',\n",
-       " 'over_all_stats_max_win_margin_team1_id',\n",
-       " 'over_all_stats_max_win_margin_team1_name',\n",
-       " 'over_all_stats_max_win_margin_team1_score',\n",
-       " 'over_all_stats_max_win_margin_team2_id',\n",
-       " 'over_all_stats_max_win_margin_team2_name',\n",
-       " 'over_all_stats_max_win_margin_team2_score',\n",
-       " 'over_all_stats_max_win_margin_venue_id',\n",
-       " 'over_all_stats_max_win_margin_venue_name',\n",
-       " 'over_all_stats_name',\n",
-       " 'over_all_stats_player_team',\n",
-       " 'over_all_stats_points',\n",
-       " 'over_all_stats_raid_bonus_points',\n",
-       " 'over_all_stats_raid_touch_points',\n",
-       " 'over_all_stats_raids',\n",
-       " 'over_all_stats_rank',\n",
-       " 'over_all_stats_red_cards',\n",
-       " 'over_all_stats_score_difference',\n",
-       " 'over_all_stats_series_id',\n",
-       " 'over_all_stats_series_name',\n",
-       " 'over_all_stats_success_raid_percent',\n",
-       " 'over_all_stats_success_raids',\n",
-       " 'over_all_stats_success_tackles',\n",
-       " 'over_all_stats_super_raids',\n",
-       " 'over_all_stats_super_tackles',\n",
-       " 'over_all_stats_tackle_bonus_points',\n",
-       " 'over_all_stats_tackle_points',\n",
-       " 'over_all_stats_tackle_success_rate',\n",
-       " 'over_all_stats_tackles',\n",
-       " 'over_all_stats_team_id',\n",
-       " 'over_all_stats_top_all_rounder_value',\n",
-       " 'over_all_stats_top_allrounder',\n",
-       " 'over_all_stats_top_allrounder_id',\n",
-       " 'over_all_stats_top_defender',\n",
-       " 'over_all_stats_top_defender_id',\n",
-       " 'over_all_stats_top_defender_value',\n",
-       " 'over_all_stats_top_raider',\n",
-       " 'over_all_stats_top_raider_id',\n",
-       " 'over_all_stats_top_raider_value',\n",
-       " 'over_all_stats_total_defending_points',\n",
-       " 'over_all_stats_total_raid_points',\n",
-       " 'over_all_stats_unsuccesful_tackles',\n",
-       " 'over_all_stats_unsuccess_raids',\n",
-       " 'over_all_stats_wins',\n",
-       " 'over_all_stats_yellow_cards']"
-      ]
-     },
-     "execution_count": 260,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
     {
      "data": {
       "text/html": [
@@ -5315,6 +5217,7 @@
        "      <th>over_all_stats_super_raids</th>\n",
        "      <th>over_all_stats_super_tackles</th>\n",
        "      <th>over_all_stats_all_outs</th>\n",
+       "      <th>over_all_stats_all_out_points</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -5329,6 +5232,7 @@
        "      <td>7</td>\n",
        "      <td>7</td>\n",
        "      <td>28</td>\n",
+       "      <td>56</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -5341,6 +5245,7 @@
        "      <td>15</td>\n",
        "      <td>12</td>\n",
        "      <td>29</td>\n",
+       "      <td>58</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -5353,6 +5258,7 @@
        "      <td>12</td>\n",
        "      <td>11</td>\n",
        "      <td>25</td>\n",
+       "      <td>50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -5365,6 +5271,7 @@
        "      <td>7</td>\n",
        "      <td>16</td>\n",
        "      <td>24</td>\n",
+       "      <td>48</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -5377,42 +5284,176 @@
        "      <td>7</td>\n",
        "      <td>25</td>\n",
        "      <td>19</td>\n",
+       "      <td>38</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>30</td>\n",
+       "      <td>U.P. Yoddha</td>\n",
+       "      <td>4</td>\n",
+       "      <td>53</td>\n",
+       "      <td>208</td>\n",
+       "      <td>167</td>\n",
+       "      <td>4</td>\n",
+       "      <td>14</td>\n",
+       "      <td>20</td>\n",
+       "      <td>40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Jaipur Pink Panthers</td>\n",
+       "      <td>7</td>\n",
+       "      <td>47</td>\n",
+       "      <td>221</td>\n",
+       "      <td>173</td>\n",
+       "      <td>7</td>\n",
+       "      <td>31</td>\n",
+       "      <td>17</td>\n",
+       "      <td>34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>7</td>\n",
+       "      <td>Puneri Paltan</td>\n",
+       "      <td>8</td>\n",
+       "      <td>42</td>\n",
+       "      <td>254</td>\n",
+       "      <td>189</td>\n",
+       "      <td>6</td>\n",
+       "      <td>22</td>\n",
+       "      <td>17</td>\n",
+       "      <td>34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>6</td>\n",
+       "      <td>Patna Pirates</td>\n",
+       "      <td>9</td>\n",
+       "      <td>39</td>\n",
+       "      <td>269</td>\n",
+       "      <td>162</td>\n",
+       "      <td>12</td>\n",
+       "      <td>23</td>\n",
+       "      <td>26</td>\n",
+       "      <td>52</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>31</td>\n",
+       "      <td>Gujarat Fortunegiants</td>\n",
+       "      <td>9</td>\n",
+       "      <td>39</td>\n",
+       "      <td>226</td>\n",
+       "      <td>160</td>\n",
+       "      <td>4</td>\n",
+       "      <td>15</td>\n",
+       "      <td>17</td>\n",
+       "      <td>34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>8</td>\n",
+       "      <td>Telugu Titans</td>\n",
+       "      <td>11</td>\n",
+       "      <td>33</td>\n",
+       "      <td>228</td>\n",
+       "      <td>143</td>\n",
+       "      <td>5</td>\n",
+       "      <td>21</td>\n",
+       "      <td>9</td>\n",
+       "      <td>18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>29</td>\n",
+       "      <td>Tamil Thalaivas</td>\n",
+       "      <td>12</td>\n",
+       "      <td>30</td>\n",
+       "      <td>248</td>\n",
+       "      <td>144</td>\n",
+       "      <td>4</td>\n",
+       "      <td>13</td>\n",
+       "      <td>13</td>\n",
+       "      <td>26</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   bio_team_id      bio_team_name over_all_stats_rank  over_all_stats_points  \\\n",
-       "0            2  Dabang Delhi K.C.                   1                     72   \n",
-       "1            4    Bengal Warriors                   2                     68   \n",
-       "2           28   Haryana Steelers                   3                     59   \n",
-       "3            5            U Mumba                   4                     53   \n",
-       "4            1    Bengaluru Bulls                   4                     53   \n",
+       "    bio_team_id          bio_team_name over_all_stats_rank  \\\n",
+       "0             2      Dabang Delhi K.C.                   1   \n",
+       "1             4        Bengal Warriors                   2   \n",
+       "2            28       Haryana Steelers                   3   \n",
+       "3             5                U Mumba                   4   \n",
+       "4             1        Bengaluru Bulls                   4   \n",
+       "5            30            U.P. Yoddha                   4   \n",
+       "6             3   Jaipur Pink Panthers                   7   \n",
+       "7             7          Puneri Paltan                   8   \n",
+       "8             6          Patna Pirates                   9   \n",
+       "9            31  Gujarat Fortunegiants                   9   \n",
+       "10            8          Telugu Titans                  11   \n",
+       "11           29        Tamil Thalaivas                  12   \n",
        "\n",
-       "   over_all_stats_success_raids  over_all_stats_success_tackles  \\\n",
-       "0                           292                             155   \n",
-       "1                           299                             166   \n",
-       "2                           259                             165   \n",
-       "3                           219                             155   \n",
-       "4                           294                             158   \n",
+       "    over_all_stats_points  over_all_stats_success_raids  \\\n",
+       "0                      72                           292   \n",
+       "1                      68                           299   \n",
+       "2                      59                           259   \n",
+       "3                      53                           219   \n",
+       "4                      53                           294   \n",
+       "5                      53                           208   \n",
+       "6                      47                           221   \n",
+       "7                      42                           254   \n",
+       "8                      39                           269   \n",
+       "9                      39                           226   \n",
+       "10                     33                           228   \n",
+       "11                     30                           248   \n",
        "\n",
-       "   over_all_stats_super_raids  over_all_stats_super_tackles  \\\n",
-       "0                           7                             7   \n",
-       "1                          15                            12   \n",
-       "2                          12                            11   \n",
-       "3                           7                            16   \n",
-       "4                           7                            25   \n",
+       "    over_all_stats_success_tackles  over_all_stats_super_raids  \\\n",
+       "0                              155                           7   \n",
+       "1                              166                          15   \n",
+       "2                              165                          12   \n",
+       "3                              155                           7   \n",
+       "4                              158                           7   \n",
+       "5                              167                           4   \n",
+       "6                              173                           7   \n",
+       "7                              189                           6   \n",
+       "8                              162                          12   \n",
+       "9                              160                           4   \n",
+       "10                             143                           5   \n",
+       "11                             144                           4   \n",
        "\n",
-       "   over_all_stats_all_outs  \n",
-       "0                       28  \n",
-       "1                       29  \n",
-       "2                       25  \n",
-       "3                       24  \n",
-       "4                       19  "
+       "    over_all_stats_super_tackles  over_all_stats_all_outs  \\\n",
+       "0                              7                       28   \n",
+       "1                             12                       29   \n",
+       "2                             11                       25   \n",
+       "3                             16                       24   \n",
+       "4                             25                       19   \n",
+       "5                             14                       20   \n",
+       "6                             31                       17   \n",
+       "7                             22                       17   \n",
+       "8                             23                       26   \n",
+       "9                             15                       17   \n",
+       "10                            21                        9   \n",
+       "11                            13                       13   \n",
+       "\n",
+       "    over_all_stats_all_out_points  \n",
+       "0                              56  \n",
+       "1                              58  \n",
+       "2                              50  \n",
+       "3                              48  \n",
+       "4                              38  \n",
+       "5                              40  \n",
+       "6                              34  \n",
+       "7                              34  \n",
+       "8                              52  \n",
+       "9                              34  \n",
+       "10                             18  \n",
+       "11                             26  "
       ]
      },
-     "execution_count": 260,
+     "execution_count": 277,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5426,9 +5467,9 @@
     "data_flattened = [flatten(d) for d in data]\n",
     "#print(data_flattened)\n",
     "rank_df = pd.DataFrame(data_flattened)\n",
-    "list(rank_df.columns)\n",
-    "rank_df = rank_df[['bio_team_id','bio_team_name','over_all_stats_rank','over_all_stats_points','over_all_stats_success_raids','over_all_stats_success_tackles','over_all_stats_super_raids','over_all_stats_super_tackles','over_all_stats_all_outs']]\n",
-    "rank_df.head()"
+    "#list(rank_df.columns)\n",
+    "rank_df = rank_df[['bio_team_id','bio_team_name','over_all_stats_rank','over_all_stats_points','over_all_stats_success_raids','over_all_stats_success_tackles','over_all_stats_super_raids','over_all_stats_super_tackles','over_all_stats_all_outs','over_all_stats_all_out_points']]\n",
+    "rank_df.head(23)"
    ]
   },
   {
@@ -6544,24 +6585,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 278,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "8    Patna Pirates\n",
+       "6    Jaipur Pink Panthers\n",
        "Name: bio_team_name, dtype: object"
       ]
      },
-     "execution_count": 272,
+     "execution_count": 278,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Predict the team with the highest super-performance total.\n",
-    "rank_df['highest_super'] = rank_df.over_all_stats_super_raids + rank_df.over_all_stats_super_tackles + rank_df.over_all_stats_all_outs\n",
+    "rank_df['highest_super'] = rank_df.over_all_stats_super_raids + rank_df.over_all_stats_super_tackles + rank_df.over_all_stats_all_outs-rank_df.over_all_stats_all_out_points\n",
     "rank_df[rank_df.highest_super == max(rank_df.highest_super)].bio_team_name\t"
    ]
   },
